[package]
name = "powerplant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
